<?xml version="1.0"?>
<package>
  <name>libzmq_catkin</name>
  <version>4.3.0</version>
  <description>A fixed version of zmq with catkin integration.</description>

  <maintainer email="quentin.rouxel@ed.ac.uk">Leph</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
